protect_srv: (backport) update to 380.7627

--- a/release/src/router/Makefile
+++ b/release/src/router/Makefile
@@ -2130,7 +2130,7 @@ wpa_supplicant-clean:
 protect_srv/stamp-h1:
 	touch $@
 
-protect_srv: protect_srv/stamp-h1
+protect_srv: shared nvram$(BCMEX) protect_srv/stamp-h1
 	$(MAKE) -C protect_srv
 
 protect_srv-install: protect_srv
