Revert "dnsmasq: update to 2.77rc3"
This reverts commit 4e4cc0a2702ad3ad61a5abace827d91dcd77c150.

--- a/release/src/router/dnsmasq/.gitignore
+++ b/release/src/router/dnsmasq/.gitignore
@@ -4,10 +4,9 @@ src/dnsmasq.pot
 src/dnsmasq
 src/dnsmasq_baseline
 src/.configured
-src/.copts_*
-contrib/lease-tools/dhcp_lease_time
-contrib/lease-tools/dhcp_release
-contrib/lease-tools/dhcp_release6
+src/.copts*
+contrib/wrt/dhcp_lease_time
+contrib/wrt/dhcp_release
 debian/base/
 debian/daemon/
 debian/files
