--- a/release/src/router/config/config.in
+++ b/release/src/router/config/config.in
@@ -246,6 +246,16 @@ config RTCONFIG_SAMBA3
 	depends on RTCONFIG_SAMBASRV
 	default n
 
+config RTCONFIG_SAMBA36X
+	bool "Compile with Samba 3.6.x"
+	depends on RTCONFIG_SAMBASRV
+	default n
+
+config RTCONFIG_SAMBA_MODERN
+         bool "Compile with modern Samba 3.6.x"
+         depends on RTCONFIG_SAMBASRV
+         default n
+
 config RTCONFIG_NFS 
 	bool "NFS Support" 
 	depends on RTCONFIG_USB
