--- a/release/src/router/Makefile
+++ b/release/src/router/Makefile
@@ -256,10 +256,13 @@ obj-$(RTCONFIG_USB_BECEEM) += gctwimax-0.0.3rc4 # for GCT WiMAX
 obj-y += libdisk
 
 obj-y += e2fsprogs
+obj-$(RTCONFIG_EXFAT) += exfat-utils
 obj-$(RTCONFIG_NFS) += nfs-utils
 obj-$(RTCONFIG_NFS) += portmap
 
+ifneq ($(RTCONFIG_TFAT),y)
 obj-y += dosfstools
+endif
 #obj-$(RTCONFIG_NTFS) += linux-ntfs-2.0.0
 obj-$(RTCONFIG_FTP) += vsftpd
 
@@ -308,7 +311,7 @@ endif
 ifeq ($(RTCONFIG_NTFS3G),y)
 obj-$(RTCONFIG_NTFS) += ntfs-3g
 else
-ifeq ($(RTCONFIG_TUXERA),y)
+ifeq ($(RTCONFIG_TUXERA_NTFS),y)
 obj-$(RTCONFIG_NTFS) += tuxera
 else
 obj-$(RTCONFIG_NTFS) += ufsd
@@ -655,6 +658,7 @@ endif
 	cd $(TARGETDIR)/lib/modules/*/kernel/fs && mv ext3/* . && rm -rf ext3 || true
 	cd $(TARGETDIR)/lib/modules/*/kernel/fs && mv jbd/* . && rm -rf jbd || true
 	cd $(TARGETDIR)/lib/modules/*/kernel/fs && mv fat/* . && rm -rf fat || true
+#	cd $(TARGETDIR)/lib/modules/*/kernel/fs && mv exfat/* . && rm -rf exfat || true
 	cd $(TARGETDIR)/lib/modules/*/kernel/fs && mv vfat/* . && rm -rf vfat || true
 	cd $(TARGETDIR)/lib/modules/*/kernel/fs && mv msdos/* . && rm -rf msdos || true
 	cd $(TARGETDIR)/lib/modules/*/kernel/fs && mv fuse/* . && rm -rf fuse || true
@@ -829,6 +833,7 @@ endif
 	$(if $(RTCONFIG_USB),@cp -f,@mv) $(TARGETDIR)/lib/modules/*/kernel/fs/jbd.*o $(PLATFORMDIR)/extras/ || true
 	$(if $(RTCONFIG_USB),@cp -f,@mv) $(TARGETDIR)/lib/modules/*/kernel/fs/mbcache.*o $(PLATFORMDIR)/extras/ || true
 	$(if $(RTCONFIG_USB),@cp -f,@mv) $(TARGETDIR)/lib/modules/*/kernel/fs/fat.*o $(PLATFORMDIR)/extras/ || true
+#	$(if $(RTCONFIG_USB),@cp -f,@mv) $(TARGETDIR)/lib/modules/*/kernel/fs/exfat.*o $(PLATFORMDIR)/extras/ || true
 	$(if $(RTCONFIG_USB),@cp -f,@mv) $(TARGETDIR)/lib/modules/*/kernel/fs/vfat.*o $(PLATFORMDIR)/extras/ || true
 	$(if $(RTCONFIG_USB),@cp -f,@mv) $(TARGETDIR)/lib/modules/*/kernel/fs/msdos.*o $(PLATFORMDIR)/extras/ || true
 	$(if $(RTCONFIG_USB),@cp -f,@mv) $(TARGETDIR)/lib/modules/*/kernel/fs/fuse.*o $(PLATFORMDIR)/extras/ || true
@@ -1051,6 +1056,30 @@ ifeq (2_6_36,$(LINUX_VERSION))
 	ln -sf mke2fs $(INSTALLDIR)/e2fsprogs/usr/sbin/mkfs.ext4
 endif
 	install -D -m 0644 e2fsprogs/e2fsck/e2fsck.conf $(INSTALLDIR)/rom/rom/etc/e2fsck.conf
+
+exfat-utils/stamp-h1:
+	cd $(TOP)/exfat-utils && autoreconf -i -f && \
+	CFLAGS="-Wall -Os -D_GNU_SOURCE $(EXTRACFLAGS) -fPIC -ffunction-sections -fdata-sections" \
+	CPPFLAGS="-I$(TOP)/exfat-utils/libexfat" \
+	LDFLAGS="-ffunction-sections -fdata-sections -Wl,--gc-sections -L$(TOP)/exfat_utils/libexfat" \
+	$(CONFIGURE)
+	touch exfat-utils/stamp-h1
+
+exfat-utils: exfat-utils/stamp-h1
+	$(MAKE) -C exfat-utils $(PARALLEL_BUILD)
+
+exfat-utils-install:
+	install -D exfat-utils/dump/dumpexfat $(INSTALLDIR)/exfat-utils/usr/sbin/dumpexfat
+	install -D exfat-utils/fsck/exfatfsck $(INSTALLDIR)/exfat-utils/usr/sbin/exfatfsck
+	install -D exfat-utils/mkfs/mkexfatfs $(INSTALLDIR)/exfat-utils/usr/sbin/mkexfatfs
+	install -D exfat-utils/label/exfatlabel $(INSTALLDIR)/exfat-utils/usr/sbin/exfatlabel
+	$(STRIP) $(INSTALLDIR)/exfat-utils/usr/sbin/*
+	ln -sf exfatfsck $(INSTALLDIR)/e2fsprogs/usr/sbin/fsck.exfat
+	ln -sf mkexfatfs $(INSTALLDIR)/e2fsprogs/usr/sbin/mkfs.exfat
+
+exfat-utils-clean:
+	-@$(MAKE) -C exfat-utils clean
+	@rm -rf exfat-utils/stamp-h1
 
 infosvr: shared nvram${BCMEX}
 
