--- a/release/src/router/config/config.in
+++ b/release/src/router/config/config.in
@@ -17,6 +17,10 @@ config RTCONFIG_EAPOL
 	bool "EAPOL"
 	default y
 
+config RTCONFIG_TELENET
+	bool "TELENET"
+	default y
+
 config RTCONFIG_PPTPD
 	bool "PPTPD"
 	default n
@@ -25,12 +29,68 @@ config RTCONFIG_ACCEL_PPTPD
 	bool "ACCEL_PPTPD"
 	default n
 
+config RTCONFIG_SNMPD
+	bool "SNMPD"
+	default n
+
 config RTCONFIG_HTTPS
 	bool "HTTPS"
 	default y
 
 config RTCONFIG_BCMARM
 	bool "Bcm Arm"
+	default n
+
+config RTCONFIG_BCM7
+	bool "Bcm sdk 7"
+	default n
+
+config RTCONFIG_BCM_794
+	bool "Bcm sdk 7_14_94_x"
+	default n
+
+config RTCONFIG_BCM_7114
+	bool "Bcm sdk 7_14_114_x"
+	default n
+
+config RTCONFIG_BCM10
+	bool "Bcm sdk 10_10_18_x"
+	default n
+
+config RTCONFIG_BCM9
+	bool "Bcm sdk 9_10_162_x"
+	default n
+
+config RTCONFIG_BUILDBCM7
+	bool "build Bcm sdk 7 on 6 platforms"
+	default n
+
+config RTCONFIG_ROMCFE
+	bool "fw include cfe"
+	default n
+
+config RTCONFIG_ROMATECCODEFIX
+	bool "fix ccode error"
+	default n
+
+config RTCONFIG_NV128
+	bool "nvram size 128k"
+	default n
+
+config RTCONFIG_DHDAP
+	bool "Bcm7 dhdap"
+	default n
+
+config RTCONFIG_WLEXE
+	bool "dhd wl exe"
+	default n
+
+config RTCONFIG_DPSTA
+	bool "Bcm7 dpsta"
+	default n
+
+config RTCONFIG_GMAC3
+	bool "Bcm7 gmac3"
 	default n
 
 config RTCONFIG_BCMSMP
@@ -80,7 +140,11 @@ config RTCONFIG_JFFSV1
 
 config RTCONFIG_ZEBRA
 	bool "Zebra"
-	default y
+	default n
+
+config RTCONFIG_QUAGGA
+	bool "Quagga"
+	default n
 
 config RTCONFIG_DDNS
 	bool "Dynamic DNS"
@@ -121,6 +185,30 @@ config RTCONFIG_EMF
 	bool "Broadcom EMF (Efficient Multicast Forwarding & IGMP Snooping)"
 	default n
 
+config RTCONFIG_BCMBSD
+	bool "Brcm Band Steer Selection"
+	default n
+
+config RTCONFIG_BCMSSD
+	bool "SSID Steer Daemon"
+	default n
+
+config RTCONFIG_BCMDCS
+	bool "Broadcom Dynamic Channel Selection"
+	default n
+
+config RTCONFIG_TRAFFIC_MGMT_RSSI_POLICY
+	bool "Traffic Management RSSI policy"
+	default n
+
+config RTCONFIG_TOAD
+	bool "Traffic Ordering Agent Daemon"
+	default n
+
+config RTCONFIG_HSPOT
+	bool "HOTSPOT 2.0 support"
+	default n
+
 config RTCONFIG_FANCTRL
 	bool "Fan Control Function"
 	default n
@@ -142,8 +230,16 @@ config RTCONFIG_WIRELESSREPEATER
 	bool "Repeater Mode"
 	default n
 
+config RTCONFIG_DISABLE_REPEATER_UI
+	bool "Hiden UI Repeater Mode"
+	default n
+
 config RTCONFIG_PROXYSTA
 	bool "Proxy STA"
+	default n
+
+config RTCONFIG_CONCURRENTREPEATER
+	bool "Concurrent Repeater"
 	default n
 
 config RTCONFIG_IXIAEP
@@ -156,10 +252,6 @@ config RTCONFIG_IPERF
 
 config RTCONFIG_TCPDUMP
 	bool "tcpdump"
-	default n
-
-config RTCONFIG_OLD_PARENTALCTRL
-	bool "Parental Control Function Old UI"
 	default n
 
 config RTCONFIG_PARENTALCTRL
@@ -191,7 +283,15 @@ config RTCONFIG_DUALWAN
 	bool "Dual WAN Support"
 	default n
 
+config RTCONFIG_HW_DUALWAN
+	bool "Dual WAN with Support"
+	default n
+
 config RTCONFIG_USER_LOW_RSSI
+	bool "User specified accepted min rssi"
+	default n
+
+config RTCONFIG_NEW_USER_LOW_RSSI
 	bool "User specified accepted min rssi"
 	default n
 
@@ -207,6 +307,14 @@ config RTCONFIG_USBRESET
 	bool "USB Power Reset Support"
 	default n
 
+config RTCONFIG_WIFIPWR
+	bool "WIFI Power option"
+	default n
+
+config RTCONFIG_LEDARRAY
+	bool "wifi led array support"
+	default n
+
 config RTCONFIG_XHCIMODE
 	bool "XHCI mode Support"
 	default n
@@ -219,6 +327,36 @@ config RTCONFIG_MEDIA_SERVER
 config RTCONFIG_CLOUDSYNC
 	bool "Cloudsync (Cloud Client)"
 	depends on RTCONFIG_USB
+	default n
+
+config RTCONFIG_SWEBDAVCLIENT
+	bool "webdavsync (webdav Client)"
+	depends on RTCONFIG_CLOUDSYNC
+	default n
+
+config RTCONFIG_DROPBOXCLIENT
+	bool "Dropboxsync (dropbox Client)"
+	depends on RTCONFIG_CLOUDSYNC
+	default n
+
+config RTCONFIG_FTPCLIENT
+	bool "FTPSync (ftp Client)"
+	depends on RTCONFIG_CLOUDSYNC
+	default n
+
+config RTCONFIG_SAMBACLIENT
+	bool "SambaSync (samba Client)"
+	depends on RTCONFIG_CLOUDSYNC
+	default n
+
+config RTCONFIG_USBCLIENT
+	bool "UsbSync (usb Client)"
+	depends on RTCONFIG_CLOUDSYNC
+	default n
+
+config RTCONFIG_FLICKRCLIENT
+	bool "FlickrSync (flickr Client)"
+	depends on RTCONFIG_CLOUDSYNC
 	default n
 
 config RTCONFIG_FTP
@@ -265,12 +403,16 @@ config RTCONFIG_UPNPIGD2
 	bool "miniupnpd: Enable IGD2 support"
 	default n
 
+config RTCONFIG_DNSMASQ
+	bool "Enable DNSMASQ support"
+	default y
+
 config RTCONFIG_DNSSEC
-	bool "dnsmasq: Enable DNSSEC support"
+	bool "DNSMASQ: Enable DNSSEC support"
 	default n
 
 config RTCONFIG_DNSCRYPT
-	bool "dnscrypt: Enable DNSCRYPT support"
+	bool "DNSCRYPT support"
 	default n
 
 config RTCONFIG_NANO
@@ -282,8 +424,8 @@ config RTCONFIG_USB_EXTRAS
 	depends on RTCONFIG_USB
 	default n
 
-config RTCONFIG_TUXERA
-	bool "Tuxera module Support"
+config RTCONFIG_EXFAT
+	bool "EXFAT module Support"
 	depends on RTCONFIG_USB
 	default n
 
@@ -295,6 +437,21 @@ config RTCONFIG_TFAT
 config RTCONFIG_NTFS
 	bool "NTFS Support"
 	depends on RTCONFIG_USB
+	default n
+
+config RTCONFIG_PARAGON_NTFS
+	bool "NTFS Support by Paragon"
+	depends on RTCONFIG_NTFS
+	default n
+
+config RTCONFIG_TUXERA_NTFS
+	bool "NTFS Support by Tuxera"
+	depends on RTCONFIG_NTFS
+	default n
+
+config RTCONFIG_OPEN_NTFS3G
+	bool "NTFS-3G Support"
+	depends on RTCONFIG_NTFS
 	default n
 
 config RTCONFIG_HFS
@@ -312,23 +469,18 @@ config RTCONFIG_TUXERA_HFS
 	depends on RTCONFIG_HFS
 	default n
 
-config RTCONFIG_EXFAT
-	bool "exFAT Support"
-	depends on RTCONFIG_USB
+config RTCONFIG_KERNEL_HFSPLUS
+	bool "Kernel HFSPLUS support"
+	depends on RTCONFIG_HFS
 	default n
 
 config RTCONFIG_UFSD_DEBUG
 	bool "ufsd debug Support"
-	depends on RTCONFIG_NTFS || RTCONFIG_HFS
+	depends on RTCONFIG_PARAGON_NTFS || RTCONFIG_PARAGON_HFS
 	default n
 
 config RTCONFIG_DISK_MONITOR
 	bool "Disk monitor Support"
-	depends on RTCONFIG_USB
-	default n
-
-config RTCONFIG_NTFS3G
-	bool "NTFS-3G Support"
 	depends on RTCONFIG_USB
 	default n
 
@@ -377,10 +529,6 @@ config RTCONFIG_APP_NETINSTALLED
 	depends on RTCONFIG_USB
 	default n
 
-config RTCONFIG_DNSMASQ
-	bool "Dnsmasq"
-	default y
-
 config RTCONFIG_APP_NOLOCALDM
 	bool "Apps are preinstalled except for Downloadmaster"
 	depends on RTCONFIG_APP_NETINSTALLED
@@ -405,6 +553,19 @@ config RTCONFIG_RALINK_MT7620
 	depends on RTCONFIG_RALINK
 	default n
 
+config RTCONFIG_RALINK_MT7621
+	bool "Ralink Chip - MT7621 Support"
+
+config RTCONFIG_SPI_FAST_CLOCK
+	bool "Ralink Chip - Double SPI clock"
+	depends on RTCONFIG_RALINK
+	default n
+
+config RTCONFIG_EDCCA
+	bool "Ralink Chip - EDCCA Monitor"
+	depends on RTCONFIG_RALINK
+	default n
+
 config RTCONFIG_N56U_SR2
 	bool "RT-N56U SR2 hardware support"
 	depends on RTCONFIG_RALINK
@@ -420,6 +581,44 @@ config RTCONFIG_LOCALE2012
 	depends on RTCONFIG_RALINK_RT3883
 	default n
 
+config RTCONFIG_QCA
+	bool "Qualcomm Atheros Chip Support"
+	default n
+
+config RTCONFIG_SOC_QCA9557
+	bool "Qualcomm Atheros QCA9557 SoC"
+	depends on RTCONFIG_QCA
+	default n
+
+config RTCONFIG_WIFI_QCA9557_QCA9882
+	bool "Qualcomm Atheros QCA9557 and QCA9882 WiFi chip"
+	depends on RTCONFIG_QCA
+	default n
+
+config RTCONFIG_QCA953X
+	bool "Qualcomm Atheros QCA953X Chip Support"
+	default n
+
+config RTCONFIG_QCA956X
+	bool "Qualcomm Atheros QCA956X Chip Support"
+	default n
+
+config RTCONFIG_QCA_PLC_UTILS
+	bool "Qualcomm Atheros Powerline Toolkit Support"
+	default n
+
+config RTCONFIG_AR7420
+	bool "Qualcomm Atheros AR7420 Powerline Chip Support"
+	default n
+
+config RTCONFIG_QCA7500
+	bool "Qualcomm Atheros QCA7500 Powerline Chip Support"
+	default n
+
+config RTCONFIG_DEFAULT_AP_MODE
+	bool "Default is AP mode"
+	default n
+
 config RTCONFIG_ODMPID
 	bool "ODM Product ID"
 	default n
@@ -430,6 +629,27 @@ config RTCONFIG_TIMEMACHINE
 
 config RTCONFIG_MDNS
 	bool "MDNS Support"
+	default n
+
+config RTCONFIG_FINDASUS
+	bool "FINDASUS Support"
+	default n
+
+config RTCONFIG_REDIRECT_DNAME
+	bool "Redirect domain name Support"
+	default n
+
+config RTCONFIG_DHCP_OVERRIDE
+	bool "DHCP override for AP/Repeater mode"
+	depends on RTCONFIG_REDIRECT_DNAME
+	default n
+
+config RTCONFIG_MTK_TW_AUTO_BAND4
+	bool "Choose BAND4 for auto channel"
+	default n
+
+config RTCONFIG_QCA_TW_AUTO_BAND4
+	bool "Choose BAND4 for auto channel"
 	default n
 
 config RTCONFIG_LED_ALL
@@ -448,13 +668,18 @@ config CONFIG_LIBUPNP
 	bool "BCM UPnP library"
 	default n
 
-config RTCONFIG_PROTECTION_SERVER
-	bool "Security Protection Mechanism"
-	default n
-
 config RTCONFIG_WPS
 	bool "WPS Support"
 	default y
+
+config RTCONFIG_WPS_ENROLLEE
+	bool "WPS Enrolle Support"
+	default n
+
+config RTCONFIG_WIFI_CLONE
+	bool "WiFi Clone Support"
+	depends on RTCONFIG_WPS_ENROLLEE
+	default n
 
 config RTCONFIG_SHP
 	bool "Special Handler Process"
@@ -492,6 +717,14 @@ config RTCONFIG_WLAN_LED
 	bool "SW Control WLAN LED"
 	default n
 
+config RTCONFIG_FAKE_ETLAN_LED
+	bool "SW Control LAN LED"
+	default n
+
+config RTCONFIG_EXT_LED_WPS
+	bool "used to standalone WPS LED(not POWER LED)"
+	default n
+
 config RTCONFIG_SWMODE_SWITCH
 	bool "HW Switch for SWMODE"
 	default n
@@ -514,6 +747,10 @@ config RTCONFIG_WIFI_TOG_BTN
 
 config RTCONFIG_WPS_RST_BTN
 	bool "HW Button for WPS and Restore dual function"
+	default n
+
+config RTCONFIG_WPS_ALLLED_BTN
+	bool "HW Button for WPS and LED dual function"
 	default n
 
 config RTCONFIG_TURBO
@@ -569,6 +806,14 @@ config RTCONFIG_WLMODULE_MT7610_AP
 	bool "Wireless module MT7610 ap"
 	default n
 
+config RTCONFIG_WLMODULE_RLT_WIFI
+	bool "Wireless module RLT WIFI"
+	default n
+
+config RTCONFIG_WLMODULE_MT7603E_AP
+	bool "Wireless module MT7603E ap"
+	default n
+
 config RTCONFIG_PSISTLOG
 	bool "Persistent syslog"
 	default n
@@ -609,8 +854,16 @@ config RTCONFIG_DMALLOC
 	bool "dmalloc"
 	default n
 
+config RTCONFIG_JFFS2ND_BACKUP
+	bool "backup some data to Read-only 2ND JFFS Partition"
+	default n
+
 config RTCONFIG_TEMPROOTFS
 	bool "temp rootfilesystem"
+	default n
+
+config RTCONFIG_ATEUSB3_FORCE
+	bool "ATE USB3 control"
 	default n
 
 config RTCONFIG_JFFS2LOG
@@ -620,6 +873,10 @@ config RTCONFIG_JFFS2LOG
 
 config RTCONFIG_WPSMULTIBAND
 	bool "Multi-band WPS"
+	default n
+
+config RTCONFIG_RALINK_DFS
+	bool "Rlink DFS support"
 	default n
 
 config RTCONFIG_ENGINEERING_MODE
@@ -632,6 +889,34 @@ config RTCONFIG_VPNC
 
 config RTCONFIG_KYIVSTAR
 	bool "KYIVSTAR specified"
+	default n
+
+config RTCONFIG_ETRON_XHCI
+	bool "Etron XHCI chip support"
+	default n
+
+config RTCONFIG_ETRON_XHCI_USB3_LED
+	bool "USB3 LED wired to ETRON XHCI chip"
+	default n
+
+config RTCONFIG_WPS_LED
+	bool "Individual WPS LED"
+	default n
+
+config RTCONFIG_MMC_LED
+	bool "Individual MMC LED"
+	default n
+
+config RTCONFIG_RESET_SWITCH
+	bool "reset switch"
+	default n
+
+config RTCONFIG_WANRED_LED
+	bool "WAN RED LED"
+	default n
+
+config RTCONFIG_BLINK_LED
+	bool "Blink LED(s)"
 	default n
 
 config RTCONFIG_CFE_NVRAM_CHK
@@ -667,9 +952,8 @@ config RTCONFIG_RGMII_BRCM5301X
 	bool "Config 5301x to RGMII mode"
 	default n
 
-config RTCONFIG_KERNEL_HFSPLUS
-	bool "Kernel HFSPLUS support"
-	depends on RTCONFIG_HFS
+config RTCONFIG_WPS_DUALBAND
+	bool "Config WPS DUALBAND"
 	default n
 
 config RTCONFIG_N18UTXBF
@@ -680,6 +964,145 @@ config RTCONFIG_BWDPI
 	bool "TrendMicro DPI engine and iQoS and Partenl Control"
 	default n
 
+config RTCONFIG_ADBLOCK
+	bool "Streaming and Pop-Up window Ad Blocking "
+	default n
+
+config RTCONFIG_TRAFFIC_CONTROL
+	bool "Traffic control for alert limited traffic"
+	default n
+
+config RTCONFIG_CTF_PPTP_L2TP
+	bool "Speedup NAT for PPTP and L2TP"
+	default n
+	
+config RTCONFIG_BCM5301X_TRAFFIC_MONITOR
+	bool "read BCM5301x register for traffic monitor"
+	default n
+
+config RTCONFIG_SPEEDTEST
+	bool "BRCM Speedtest for detect upload / downlad bandwidth "
+	default n
+
+config RTCONFIG_BONDING
+	bool "Linux Net Bonding"
+	default n
+
+config RTCONFIG_UIDEBUG
+	bool "Enable UI debug mode"
+	default n
+
+config RTCONFIG_ROG
+	bool "Get APP Traffic from ROG client"
+	default n
+
+config RTCONFIG_GEOIP
+	bool "determine country by IP address"
+	default n
+
+config RTCONFIG_TRANSMISSION
+	bool "Transmission A Fast, Easy and Free BitTorrent client"
+	default n
+
+config RTCONFIG_NOWL
+	bool "no load wl module (only dhd test)"
+	default n
+
+config RTCONFIG_TCODE
+	bool "Territory code"
+	default y
+
+config RTCONFIG_ALLNOWL
+	bool "no load all wl module "
+	default n
+
+config RTCONFIG_WIFILOGO
+	bool "building for Wi-Fi certification"
+	default n
+
+config RTCONFIG_JFFS2USERICON
+	bool "Client list user upload icon"
+	default n
+
+config RTCONFIG_EXT_RTL8365MB
+	bool "rtl8365mb driver flag"
+
+config RTCONFIG_TOR
+	bool "The orion router function"
+	default n
+
+config RTCONFIG_TR069
+	bool "TR-069 agent"
+	default n
+
+config RTCONFIG_TR181
+	bool "Support TR-181 data model"
+	default n
+
+config RTCONFIG_STAINFO
+	bool "STA informtion support"
+	default n
+
+config RTCONFIG_CLOUDCHECK
+	bool "Cloudcheck support"
+	default n
+
+config RTCONFIG_GETREALIP
+	bool "Get external IP support"
+	default n
+
+config RTCONFIG_TUNNEL
+	bool "TUNNEL config"
+	default n
+
+config RTCONFIG_CFEZ
+	bool "compressed cfe"
+	default n
+
+config RTCONFIG_RESTRICT_GUI
+	bool "Restrict GUI"
+	default n
+
+config RTCONFIG_LACP
+	bool "LACP support"
+	default n
+
+config RTCONFIG_KEY_GUARD
+	bool "Key Guard support"
+	default n
+
+config RTCONFIG_RECVFILE
+	bool "Bcm recvfile support"
+	default n
+
+config RTCONFIG_WTFAST
+	bool "WTFast support"
+	default n
+
+config RTCONFIG_ERP_TEST
+	bool "erp test"
+	default n
+
 config RTCONFIG_REBOOT_SCHEDULE
 	bool "Reboot_schedule"
+	default n
+
+config RTCONFIG_INTERNAL_GOBI
+	bool "built-in Gobi"
+	default n
+
+config RTCONFIG_UPNPC
+	bool "UPNP client support"
+	default y
+
+config RTCONFIG_BONJOUR
+	bool "Apple device query support"
+	default y
+
+config RTCONFIG_FORCE_AUTO_UPGRADE
+	bool "Force auto update"
+	default n
+
+config RTCONFIG_TUXERA_SMBD
+	bool "tuxera smbd"
 	default n
