others: add gettunnelip.sh symlink for Merlin consistency

--- a/release/src/router/others/Makefile
+++ b/release/src/router/others/Makefile
@@ -56,6 +56,7 @@ endif
 
 # Get external ip via stun
 	install -m 0755 getextip.sh $(INSTALLDIR)/usr/sbin
+	ln -sf getextip.sh $(INSTALLDIR)/usr/sbin/gettunnelip.sh
 
 # Entware setup script
 	install -m 0700 entware-setup.sh $(INSTALLDIR)/usr/sbin
