--- a/release/src/router/eapd/linux/Makefile
+++ b/release/src/router/eapd/linux/Makefile
@@ -5,6 +5,7 @@ include $(SRCBASE)/router/.config
 INCLUDE += -I. -I.. -I$(SRCBASE)/include -I$(SRCBASE)/shared -I$(SRCBASE)/router/shared -I$(SRCBASE)/router/nas
 
 CFLAGS += $(INCLUDE)
+CFLAGS += $(WLAN_ComponentIncPath)
 CFLAGS += -DEAPD_WKSP_AUTO_CONFIG
 #CFLAGS += -DNAS_GTK_PER_STA
 CFLAGS += -Wall -DEAPDDUMP
@@ -25,18 +26,16 @@ vpath %.c $(SRCBASE)/router/eapd $(SRCBASE)/shared
 OBJS = eapd.o eapd_linux.o
 OBJS += nas_eap.o wps_eap.o ses_eap.o
 
-#ifdef BCMWAPI_WAI
-ifeq ($(CONFIG_WAPI),y)
-OBJS += wai_eap.o
+
+#ifdef BCM_DCS
+ifeq ($(RTCONFIG_BCMDCS),y)
+OBJS += dcs_eap.o
+CFLAGS += -DBCM_DCS
 endif
 #endif
 
-#ifdef BCM_DCS
-#ifeq ($(CONFIG_BCMDCS),y)
-OBJS += dcs_eap.o
-CFLAGS += -DBCM_DCS
-#endif
-#endif
+OBJS += wlceventd_eap.o
+CFLAGS += -DBCM_WLCEVENTD
 
 ifeq ($(wildcard $(SRCBASE)/router/eapd/*.c),)
 all:
