--- a/release/src/router/nas_arm/nas/Makefile
+++ b/release/src/router/nas_arm/nas/Makefile
@@ -1,7 +1,7 @@
 #
 # 802.1x Authenticator (Network Access Server) Embedded Linux Build Makefile
 #
-# Copyright (C) 2012, Broadcom Corporation
+# Copyright (C) 2015, Broadcom Corporation
 # All Rights Reserved.
 # 
 # This is UNPUBLISHED PROPRIETARY SOURCE CODE of Broadcom Corporation;
@@ -9,13 +9,12 @@
 # or duplicated in any form, in whole or in part, without the prior
 # written permission of Broadcom Corporation.
 #
-# $Id: Makefile 341899 2012-06-29 04:06:38Z $
+# $Id: Makefile 382679 2013-02-03 04:43:50Z $
 #
 
 include ../../common.mak
-CFLAGS	+= $(EXTRACFLAGS)
 
-CFLAGS	+= -I.. -I$(SRCBASE)/include -I$(SRCBASE)/router/shared -Wall -Werror
+CFLAGS	+= -I.. -I$(SRCBASE)/include -I$(SRCBASE)/common/include -I$(SRCBASE)/router/shared -Wall -Werror
 CFLAGS	+= $(WLAN_ComponentIncPath)
 
 #CFLAGS	+= -g -DDEBUG
@@ -25,7 +24,9 @@ CFLAGS  += -DNAS_WKSP_BUILD_NAS_SUPPL
 #CFLAGS  += -DNAS_GTK_PER_STA
 CFLAGS  += -DNAS_RADIUS
 CFLAGS  += -DNAS_WKSP_ON_DEMAND
-
+ifeq ($(RTCONFIG_IPV6),y)
+CFLAGS += -DNAS_IPV6
+endif
 
 CFLAGS	+= -DBCMSUPPL
 
