mdns: fix avahi-daemon config directory location

--- a/release/src/router/Makefile
+++ b/release/src/router/Makefile
@@ -1,4 +1,3 @@
-
 #
 # Broadcom Linux Router Makefile
 #
@@ -365,8 +364,9 @@ obj-$(RTCONFIG_TIMEMACHINE) += libgcrypt-1.5.1
 obj-$(RTCONFIG_TIMEMACHINE) += db-4.8.30
 obj-$(RTCONFIG_TIMEMACHINE) += netatalk-3.0.5
 ifeq ($(or $(RTCONFIG_TIMEMACHINE),$(RTCONFIG_MDNS)),y)
-obj-$(RTCONFIG_TIMEMACHINE) += avahi-0.6.32
-obj-$(RTCONFIG_TIMEMACHINE) += expat-2.2.0
+obj-y += libdaemon
+obj-y += avahi-0.6.32
+obj-y += expat-2.2.0
 else
 obj-$(RTCONFIG_MEDIA_SERVER) += mDNSResponder
 endif
@@ -3235,7 +3235,15 @@ expat-2.2.0-clean:
 #avahi-0.6.32
 avahi-0.6.32/stamp-h1: shared nvram$(BCMEX) expat-2.2.0 libdaemon
 	cd $(TOP)/avahi-0.6.32 && \
-	$(CONFIGURE) LDFLAGS="-L$(TOP)/expat-2.2.0/.libs -ldl -lpthread" CFLAGS="-I$(TOP)/expat-2.2.0/lib -I$(TOP)/shared -I$(SRCBASE)/include" --prefix=$(INSTALLDIR)/avahi-0.6.32/usr --with-distro=archlinux --disable-glib --disable-gobject --disable-qt3 --disable-qt4 --disable-gtk --disable-dbus --disable-expat --disable-gdbm --disable-python --disable-pygtk --disable-python-dbus --disable-mono --disable-monodoc --disable-gtk3 --with-xml=none  LIBDAEMON_LIBS="-L$(TOP)/libdaemon/libdaemon/.libs -ldaemon -L$(TOP)/nvram$(BCMEX) -lnvram -L$(TOP)/shared -lshared $(if $(RTCONFIG_QTN),-L$(TOP)/libqcsapi_client -lqcsapi_client)" LIBDAEMON_CFLAGS="-I$(TOP)/libdaemon" --disable-autoipd --with-xml=expat --disable-stack-protector --with-avahi-user="admin" --with-avahi-group="root"
+	$(CONFIGURE) LDFLAGS="-L$(TOP)/expat-2.2.0/.libs -ldl -lpthread" \
+	CFLAGS="-I$(TOP)/expat-2.2.0/lib -I$(TOP)/shared -I$(SRCBASE)/include" \
+	--prefix=$(INSTALLDIR)/avahi-0.6.32/usr --with-distro=archlinux \
+	--disable-glib --disable-gobject --disable-qt3 --disable-qt4 --disable-gtk \
+	--disable-dbus --disable-expat --disable-gdbm --disable-python \
+	--disable-pygtk --disable-python-dbus --disable-mono --disable-monodoc \
+	--disable-gtk3 --with-xml=none \
+	LIBDAEMON_LIBS="-L$(TOP)/libdaemon/libdaemon/.libs -ldaemon -L$(TOP)/nvram$(BCMEX) -lnvram -L$(TOP)/shared -lshared $(if $(RTCONFIG_QTN),-L$(TOP)/libqcsapi_client -lqcsapi_client)" \
+	LIBDAEMON_CFLAGS="-I$(TOP)/libdaemon" --disable-autoipd --with-xml=expat --disable-stack-protector --with-avahi-user="admin" --with-avahi-group="root"
 	touch $@
 
 avahi-0.6.32: avahi-0.6.32/stamp-h1
