--- a/release/src-rt-6.x.4708/linux/linux-2.6.36/Makefile
+++ b/release/src-rt-6.x.4708/linux/linux-2.6.36/Makefile
@@ -579,6 +579,8 @@ ifneq ($(CONFIG_BCM47XX),)
 KBUILD_CFLAGS += -DBCM47XX
 endif
 
+KBUILD_CFLAGS += -DWLMSG_ASSOC
+
 ifdef CONFIG_CC_OPTIMIZE_FOR_SIZE
 KBUILD_CFLAGS	+= -Os
 else
