--- a/release/src/router/asuswebstorage/Makefile
+++ b/release/src/router/asuswebstorage/Makefile
@@ -7,7 +7,7 @@ include ../common.mak
 
 #C = $(CC)
 #TOP = $(TOP)
-CFLAGS = -I$(TOP)/curl-7.21.7/include  -I$(TOP)/libxml2/include  -I$(TOP)/openssl/include
+CFLAGS += -g -O2 -I$(TOP)/curl-7.21.7/include  -I$(TOP)/libxml2/include  -I$(TOP)/openssl/include
 CFLAGS += -I$(SRCBASE) -I$(SRCBASE)/include -I. -I$(TOP)/shared
 #CFLAGS = -g -rdynamic
 CFLAGS += -D_FILE_OFFSET_BITS=64
@@ -15,7 +15,7 @@ LDFLAGS =  -L$(TOP)/curl-7.21.7/lib/.libs  -L$(TOP)/libxml2/.libs  -L$(TOP)/open
 LIBS = -lcurl -lxml2 -lssl -lcrypto -lpthread -ldl -lnvram -lm
 
 ifeq ($(RTCONFIG_BCMARM),y)
-CFLAGS += -DHAVE_TYPE_FLOAT
+CFLAGS += -DTYPEDEF_FLOAT_T
 endif
 
 ifeq ($(RTCONFIG_QTN),y)
@@ -24,7 +24,7 @@ endif
 
 ifeq ($(wildcard $(TOP)/asuswebstorage/*.c),)
 all:
-	-cp -f $(TOP)/asuswebstorage$(BCMEX)/prebuild/asuswebstorage asuswebstorage
+	-cp -f $(TOP)/asuswebstorage/prebuild/asuswebstorage asuswebstorage
 else
 all: asuswebstorage
 endif
