make: update for new miniupnpd

--- a/release/src/router/Makefile
+++ b/release/src/router/Makefile
@@ -1492,7 +1492,10 @@ miniupnpd: $(IPTABLES) miniupnpd/config.h
 	@$(SEP)
 	cp -f ./shared/version.h miniupnpd/.
 	$(MAKE) -C miniupnpd -f Makefile.merlin $(PARALLEL_BUILD) \
-		IPTABLESPATH=$(TOP)/$(IPTABLES)
+		IPTABLESPATH=$(TOP)/$(IPTABLES) \
+		EXTRACFLAGS="-Os $(EXTRACFLAGS) -idirafter$(TOP)/kernel_header/include -ffunction-sections -fdata-sections -I$(TOP)/e2fsprogs/lib" \
+	    LDFLAGS="$(EXTRALDFLAGS) -ffunction-sections -fdata-sections -Wl,--gc-sections -L$(IPTC_LIBDIR) -L$(TOP)/e2fsprogs/lib" \
+	    LDLIBS="-Wl,--as-needed $(IPTC_LIBS) -luuid"
 
 miniupnpd-clean:
 	-@$(MAKE) -C miniupnpd -f Makefile.merlin clean
