make: add make and config support for stubby

--- a/release/src/router/config/config.in
+++ b/release/src/router/config/config.in
@@ -415,6 +415,10 @@ config RTCONFIG_DNSCRYPT
 	bool "DNSCRYPT support"
 	default n
 
+config RTCONFIG_STUBBY
+	bool "DNS over TLS support"
+	default n
+
 config RTCONFIG_NANO
 	bool "nano text editor"
 	default n
