--- a/release/src/router/dnsmasq/.gitignore
+++ b/release/src/router/dnsmasq/.gitignore
@@ -3,6 +3,7 @@ src/*.mo
 src/dnsmasq.pot
 src/dnsmasq
 src/dnsmasq_baseline
+src/.configured
 src/.copts_*
 contrib/lease-tools/dhcp_lease_time
 contrib/lease-tools/dhcp_release
