--- a/release/src/router/ez-ipupdate/Makefile
+++ b/release/src/router/ez-ipupdate/Makefile
@@ -100,6 +100,11 @@ ez_ipupdate_OBJECTS += asus_ddns.o
 CFLAGS += -I$(SRCBASE)/include -I$(TOP)/shared -DASUS_DDNS
 LDFLAGS += -L$(TOP)/shared -lshared -L$(TOP)/nvram${BCMEX} -lnvram 
 #end of Yau add
+ifeq ($(RTCONFIG_HTTPS),y)
+CFLAGS += -I$(TOP)/mssl -DHAVE_SSL
+LDFLAGS += -L$(TOP)/mssl
+LIBS += -lmssl
+endif
 ifeq ($(RTCONFIG_BCMARM),y)
 LDFLAGS += -lgcc_s
 endif
